Table "users" {
  "id" UUID [pk, default: `gen_random_uuid()`]
  "name" VARCHAR(100) [not null]
  "phone" VARCHAR(25) [not null]
  "email" VARCHAR(50) [not null]
  "password" TEXT [not null]
  "created_at" timestamptz [default: `Now()`]
}

Table "categories" {
  "id" UUID [pk, default: `gen_random_uuid()`]
  "name" VARCHAR(100) [unique, not null]
  "icon" VARCHAR(50) [not null]
  "created_at" timestamptz [default: `Now()`]
}

Table "places" {
  "id" UUID [pk, default: `gen_random_uuid()`]
  "user_id" UUID [not null]
  "category_id" UUID [not null]
  "name" VARCHAR(50) [not null]
  "thumbnail" TEXT [not null]
  "phone" VARCHAR(50) [unique, not null]
  "email" VARCHAR(50) [unique]
  "address" TEXT [not null]
  "social_media" JSON
  "location" GEOMETRY [not null]
  "created_at" timestamptz [default: `Now()`]
}

Table "products" {
  "id" UUID [pk, default: `gen_random_uuid()`]
  "place_id" UUID [not null]
  "name" VARCHAR(100) [not null]
  "price" INTEGER [not null]
  "discounted_price" INTEGER
  "discount" BOOLEAN [default: false]
  "pinned" BOOLEAN [default: false]
  "available" BOOLEAN [default: false]
  "created_at" timestamptz [default: `Now()`]
}

Table "events" {
  "id" UUID [pk, default: `gen_random_uuid()`]
  "place_id" UUID [not null]
  "thumbnail" TEXT [not null]
  "title" VARCHAR(100) [not null]
  "body" TEXT [not null]
  "created_at" timestamptz [default: `Now()`]
}

Table "authentications" {
  "token" TEXT [not null]
}

Ref "fk_places.user.id":"users"."id" < "places"."user_id" [delete: cascade]

Ref "fk_products.place.id":"places"."id" < "products"."place_id" [delete: cascade]

Ref "fk_events.place.id":"places"."id" < "events"."place_id" [delete: cascade]
